[tool.poetry]
name = "aula-18"
version = "0.1.0"
description = ""
authors = ["Theo Lourenção <theo_lou@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
db = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
